# pyraseq

./: .gitignore  BIOFASTER_INTEGRATION.md  Cargo.toml  PYTHON_GUIDE.md  README.md  pixi.toml  pyproject.toml
benchmarks/: benchmark_seqkit.sh  example_benchmark.py
python/paraseq_filt/: __init__.py  __init__.pyi  paraseq_filt.pyi
src/: lib.rs  main.rs
tests/: generate_test_data.py  test.sh  test_count.sh  test_python.py  test_python_new.py  test_types.py
tests/data/: small.fasta  small.fastq  test.fasta  test.fasta.bgz  test.fastq  test.fastq.bgz
tools/: paraseq-filt.sh  pyraseq.sh
