[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "paraseq-filt"
version = "0.1.0"
description = "Fast parallel FASTA/FASTQ filtering using Rust and paraseq"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["bioinformatics", "fasta", "fastq", "parallel", "filter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Repository = "https://github.com/yourusername/paraseq_filt"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "paraseq_filt"

# Include type stubs and py.typed marker
include = [
    { path = "python/paraseq_filt/*.pyi", format = "sdist" },
    { path = "python/paraseq_filt/py.typed", format = "sdist" },
]
